complete user sign up and database connection

--- a/app.json
+++ b/app.json
@@ -32,7 +32,7 @@
       [
         "expo-router",
         {
-          "origin": "https://uber.dev/"
+          "origin": "https://uber.com/"
         }
       ]
     ],
