--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_d2VsY29tZS1yZWluZGVlci01Ny5jbGVyay5hY2NvdW50cy5kZXYk
-
+EXPO_PUBLIC_DATABASE_URL='postgresql://neondb_owner:npg_GCLVPg0d6frs@ep-royal-firefly-a1kumcb3-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
+EXPO_PUBLIC_SERVER_URL = https://uber.com/
