--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.3",
     "@gorhom/bottom-sheet": "^4.6.4",
-    "@neondatabase/serverless": "^0.9.4",
+    "@neondatabase/serverless": "^1.0.2",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-navigation/native": "^7.1.8",
     "@stripe/stripe-react-native": "0.50.3",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
+    "dotenv": "^16.6.1",
+    "drizzle-orm": "^0.44.7",
     "expo": "^54.0.25",
     "expo-auth-session": "~7.0.9",
     "expo-constants": "~18.0.10",
@@ -47,7 +49,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.20.1",
     "react-native-maps-directions": "^1.9.0",
-    "react-native-modal": "^13.0.1",
+    "react-native-modal": "^13.0.2",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -62,6 +64,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~19.1.10",
     "@types/react-test-renderer": "^18.0.7",
+    "drizzle-kit": "^0.31.7",
     "eslint": "^8.57.0",
     "eslint-config-expo": "~10.0.0",
     "eslint-config-prettier": "^9.1.0",
@@ -72,6 +75,7 @@
     "prettier": "^3.3.3",
     "react-test-renderer": "19.1.0",
     "tailwindcss": "3.3.2",
+    "tsx": "^4.21.0",
     "typescript": "~5.9.2"
   },
   "private": true
